# smart-support-agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/smart_support_agent/agents/: support_agent.py
src/smart_support_agent/api/: main.py
src/smart_support_agent/llm/: model.py
src/smart_support_agent/ui/: app.py
tests/test_agents/: test_support_agent.py
